--- a/WebApplicationNew/src/login.html
+++ b/WebApplicationNew/src/login.html
@@ -9,10 +9,10 @@
 	<form ng-controller="ctlLogin">
 		<ul>
 			<li>
-				Email <input type="email" ng-model="user.email" />
+				Username <input type="text" ng-model="username" />
 			</li>
 			<li>
-				Password <input type="password" ng-model="user.password"/>
+				Password <input type="password" ng-model="password"/>
 			</li>
 			<li>
 				<input type="button" value="Login" ng-click="login()"/>
